# jumpstarter

./: .containerignore  .devfile.yaml  .editorconfig  .gitignore  CLAUDE.md  CONTRIB.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ubi9  Makefile  PR_DESCRIPTION.md  README.md  RELEASE-NOTES-0.9.0.md  buf.gen.yaml  build.gradle.kts  go.mod  go.sum  import_pr.sh  install.sh  main.go  package-lock.json  package.json  pyproject.toml  renovate.json  renovate.jsonc  settings.gradle.kts  typos.toml
examples/mcu-rp2350/: Containerfile  Containerfile.devspace  pyproject.toml
protocol/: Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
protocol/.github/workflows/: generate.yaml  lint.yaml
protocol/go/: go.mod
protocol/grpc_experiments/: server.py
protocol/grpc_experiments/grpc/: jumpstarter_pb2.pyi  jumpstarter_pb2_grpc.py
protocol/grpc_experiments/jgrpc/: jumpstarter_pb2.pyi  jumpstarter_pb2_grpc.py
protocol/proto/: exporter.proto  jumpstarter.proto
protocol/python/: .gitignore  pyproject.toml
python/: .devfile.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIB.md  CONTRIBUTING.md  Containerfile  Containerfile.utils  Dockerfile  Dockerfile.utils  Makefile  README.md  buf.gen.yaml  conftest.py  flake.nix  install.sh  kind_config.yaml  pyproject.toml
python/.devcontainer/: Containerfile  Dockerfile  devcontainer.json
python/.devfile/: Containerfile  Containerfile.client
python/.github/workflows/: backport.yml  build.yaml  build_oci_bundle.yaml  documentation.yaml  e2e.yaml  lockfile.yaml  pr_analytics.yaml  publish.yaml  pytest.yaml  ruff.yaml  trigger-packages-index.yaml  typos.yaml
python/__templates__/: create_driver.sh
python/__templates__/driver/: pyproject.toml.tmpl
python/cli/admin/: pyproject.toml
python/cli/client/: pyproject.toml
python/cli/common/: pyproject.toml
python/cli/exporter/: README.md  pyproject.toml
python/cli/jmp/: pyproject.toml
python/contrib/__templates__/: create_driver.sh
python/contrib/can/: pyproject.toml
python/contrib/dutlink/: pyproject.toml
python/contrib/raspberrypi/: pyproject.toml
python/contrib/sdwire/: pyproject.toml
python/contrib/ustreamer/: pyproject.toml
python/docs/: Makefile  architecture.md  glossary.md  make-all-versions.sh  multiversion.sh  usage.md
python/docs/source/: architecture.md  conf.py  conf.py.versions  config.md  contributing.md  drivers.md  glossary.md  index.md  index.rst  installation.md  introduction.md  reference.md  solution-architecture.md  usage.md
python/examples/: dutlink.py
python/examples/android-emulator/: README.md  pyproject.toml  setup.sh
python/examples/automotive/: README.md  pyproject.toml
python/examples/driver-power-example/: .gitignore  README.md  pyproject.toml
python/examples/exporter-device-example/: .gitignore  README.md  exporter.yaml  pyproject.toml  registry.yaml
python/examples/soc-pytest/: README.md  pyproject.toml
python/examples/xcp-ecu/: README.md  pyproject.toml
python/jumpstarter/: __main__.py
python/jumpstarter/cli/: client.py  client_test.py  control.py  create.py  create_test.py  delete.py  delete_test.py  exporter.py  exporter_test.py  get.py  get_test.py  import_res.py  import_res_test.py  import_resource.py  install.py  j.py  jmp.py  lease.py  main.py  shell.py  version.py
python/jumpstarter/client/: __init__.py  base.py  client.py  config.py  core.py  lease.py  mixins.py  proxy.py
python/jumpstarter/common/: __init__.py  aiohttp.py  condition.py  grpc.py  importlib.py  metadata.py  metadata_test.py  opendal.py  (+6 more)
python/scripts/: convert_readme_snippets.py
python/tests/: conftest.py  test_client_config.py  test_driver_base.py  test_driver_power.py  test_driver_serial.py  test_driver_storage.py  test_drivers_composite.py  test_drivers_power.py  test_example_files.py  test_exporter.py  test_listener.py  test_user_config.py
rust/: .gitignore  Cargo.toml  Containerfile.controller  Makefile  README.md
rust/docs/: 01-interop-and-migration.md  02-exporter-core-plan.md  03-native-exporter-migration.md
rust/jumpstarter-admin/: Cargo.toml
rust/jumpstarter-auth/: Cargo.toml
rust/jumpstarter-cli/: Cargo.toml
rust/jumpstarter-client/: Cargo.toml  build.rs
rust/jumpstarter-client-cli/: Cargo.toml
rust/jumpstarter-cluster/: Cargo.toml
rust/jumpstarter-codec/: Cargo.toml
rust/jumpstarter-codegen/: Cargo.toml
rust/jumpstarter-compression/: Cargo.toml
rust/jumpstarter-config/: Cargo.toml
rust/jumpstarter-conformance/: Cargo.toml
rust/jumpstarter-controller-api/: Cargo.toml
rust/jumpstarter-controller-auth/: Cargo.toml
rust/jumpstarter-controller-config/: Cargo.toml
rust/jumpstarter-controller-core/: Cargo.toml
rust/jumpstarter-controller-manager/: Cargo.toml
rust/jumpstarter-controller-runtime/: Cargo.toml
rust/jumpstarter-controller-service/: Cargo.toml
rust/jumpstarter-core/: Cargo.toml
rust/jumpstarter-core-uniffi/: Cargo.toml  uniffi.toml
rust/jumpstarter-device-example/: Cargo.toml  build.rs  exporter.yaml
rust/jumpstarter-driver/: Cargo.toml
rust/jumpstarter-driver-core/: Cargo.toml
rust/jumpstarter-driver-example/: Cargo.toml
rust/jumpstarter-driver-harness/: Cargo.toml
rust/jumpstarter-driver-macros/: Cargo.toml
rust/jumpstarter-driver-network/: Cargo.toml  build.rs
rust/jumpstarter-driver-power-example/: Cargo.toml  build.rs
rust/jumpstarter-driver-power-pure/: Cargo.toml  build.rs
rust/jumpstarter-driver-power-pure-client/: Cargo.toml  build.rs
rust/jumpstarter-driver-runtime/: Cargo.toml
rust/jumpstarter-exec/: Cargo.toml  build.rs
rust/jumpstarter-exporter/: Cargo.toml
rust/jumpstarter-fsm/: Cargo.toml
rust/jumpstarter-fsm-macros/: Cargo.toml
rust/jumpstarter-lease/: Cargo.toml
rust/jumpstarter-mcp/: Cargo.toml
rust/jumpstarter-protocol/: Cargo.toml  build.rs
rust/jumpstarter-router/: Cargo.toml
rust/jumpstarter-router-service/: Cargo.toml
rust/jumpstarter-shm/: Cargo.toml
rust/jumpstarter-testing/: Cargo.toml
rust/jumpstarter-testing-macros/: Cargo.toml
rust/jumpstarter-transport/: Cargo.toml
(+1927 files in other folders)
