[workspace]
resolver = "2"
members = [
    "rust/jumpstarter-client",
    "rust/jumpstarter-driver-network",
    "rust/jumpstarter-testing",
    "rust/jumpstarter-testing-macros",
    "examples/polyglot/rust/gen",
    "examples/polyglot/rust/tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jumpstarter-dev/jumpstarter"

[workspace.dependencies]
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
bytes = "1"
jumpstarter-client = { path = "rust/jumpstarter-client" }
jumpstarter-driver-network = { path = "rust/jumpstarter-driver-network" }
jumpstarter-testing = { path = "rust/jumpstarter-testing" }
jumpstarter-testing-macros = { path = "rust/jumpstarter-testing-macros" }
