[tool.poetry]
name = "grpc-experiments"
version = "0.1.0"
description = ""
authors = ["Miguel Angel Ajo <majopela@redhat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
grpcio = "^1.64.1"
grpcio-tools = "^1.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
