[tool.poetry]
name = "jumpstarter"
version = "0.1.0"
description = ""
authors = [
  "Miguel Angel Ajo Pelayo <majopela@redhat.com>",
  "Nick Cao <ncao@redhat.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyserial = "^3.5"
pyusb = "^1.2.1"
pyudev = "^0.24.3"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
anyio = "^4.4.0"
typing-extensions = "^4.12.2"
gpiozero = {version = "^2.0.1", optional = true}

[tool.poetry.dependencies.jumpstarter-protocol]
git = "https://github.com/jumpstarter-dev/jumpstarter-protocol.git"
subdirectory = "python"

[tool.poetry.scripts]
jmp = "jumpstarter.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-anyio = "^0.0.0"
pytest-cov = "^5.0.0"
ruff = "^0.5.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^3.0.1"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry.extras]
rpi = ["gpiozero"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "C", "E", "F", "W", "B"]

[tool.typos.default]
locale = "en-us"
extend-ignore-re = [
  "dGhpc2lzYXRva2VuLTEyMzQxMjM0MTIzNDEyMzQtc2Rxd3Jxd2VycXdlcnF3ZXJxd2VyLTEyMzQxMjM0MTIzNDEyMzQxMjM0LXF3ZX",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["conftest.py", "test_*.py", "*_test.py"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose --cov --cov-report=html --cov-report=xml"
