[project]
name = "jumpstarter"
version = "0.1.0"
description = ""
authors = [
  { name = "Miguel Angel Ajo Pelayo", email = "majopela@redhat.com" },
  { name = "Nick Cao", email = "ncao@redhat.com" },
  { name = "Kirk Brauer", email = "kbrauer@hatci.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pexpect>=4.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "anyio>=4.4.0",
    "aiohttp>=3.10.5",
    "tqdm>=4.66.5",
    "opendal>=0.45.8",
    "pydantic>=2.8.2",
    "pyserial>=3.5",
    "jumpstarter-protocol",
    "wsproto>=1.2.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0.2",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "furo>=2024.8.6",
    "esbonio>=0.16.4",
    "sphinx-autobuild>=2024.4.16",
]

[project.scripts]
jmp = "jumpstarter.__main__:main"
j = "jumpstarter.cli.j:main"

[tool.hatch.build.targets.wheel]
packages = ["jumpstarter"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.1",
    "typos>=1.23.6",
]

[tool.uv.sources.jumpstarter-protocol]
git = "https://github.com/jumpstarter-dev/jumpstarter-protocol.git"
subdirectory = "python"

[tool.uv.workspace]
members = ["contrib/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "C", "E", "F", "W", "B"]

[tool.typos.default]
locale = "en-us"

[tool.coverage.run]
omit = ["conftest.py", "test_*.py", "*_test.py"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose --cov --cov-report=html --cov-report=xml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
