[project]
name = "jumpstarter"
dynamic = ["version", "urls"]
description = ""
authors = [
    { name = "Miguel Angel Ajo Pelayo", email = "majopela@redhat.com" },
    { name = "Nick Cao", email = "ncao@redhat.com" },
    { name = "Kirk Brauer", email = "kbrauer@hatci.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "pexpect>=4.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "anyio>=4.4.0,!=4.6.2",
    "aiohttp>=3.10.5",
    "tqdm>=4.66.5",
    "opendal>=0.45.8",
    "pydantic>=2.8.2",
    "pyserial>=3.5",
    "wsproto>=1.2.0",
    "fabric>=3.2.2",
    "grpcio>=1.66.1",
    "protobuf>=5.28.0"
]

[dependency-groups]
docs = [
    "sphinx<8.1.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "furo>=2024.8.6",
    "esbonio>=0.16.4",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-click>=6.0.0",
    "sphinx-substitution-extensions>=2024.10.17",
]
dev = [
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.1",
    "typos>=1.23.6",
    "pre-commit>=3.8.0",
    "cryptography>=43.0.1",
    "websocket-client>=1.8.0",
    "esbonio>=0.16.5",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["jumpstarter"]

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://jumpstarter.dev"
source_archive = "https://github.com/jumpstarter-dev/repo/archive/{commit_hash}.zip"

[tool.uv.workspace]
members = ["contrib/drivers/*", "contrib/libs/*", "examples/*", "cli/*"]

[tool.uv.sources]
jumpstarter = { workspace = true }

[tool.ruff]
exclude = ["jumpstarter/v1"]
line-length = 120

[tool.ruff.lint]
exclude = ["jumpstarter/v1"]
extend-select = ["I", "C", "E", "F", "W", "B"]

[tool.typos.default]
locale = "en-us"

[tool.coverage.run]
omit = ["conftest.py", "test_*.py", "*_test.py", "*_pb2.py", "*_pb2_grpc.py"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose --cov --cov-report=html --cov-report=xml --cov-append"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
