[project]
name = "jumpstarter-mcu-rp2350"
version = "0.1.0"
description = "Example that uses jumpstarter to debug/develop on a MCU target"
authors = [
  { name = "Miguel Angel Ajo Pelayo", email = "majopela@redhat.com" },
  { name = "Kirk Brauer", email = "kbrauer@hatci.com" },
  { name = "Nick Cao", email = "ncao@redhat.com" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "jumpstarter-all"
]
