[tool.poetry]
name = "jumpstarter-protocol"
version = "0.1.0"
description = ""
authors = ["The Jumpstarter Authors"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "jumpstarter" },
]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^5.27.1"
grpcio = "^1.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
