[package]
name = "jumpstarter-admin"
description = "Jumpstarter admin: Kubernetes CRUD for Client/Exporter/Lease resources (jmp admin)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
jumpstarter-config = { path = "../jumpstarter-config" }
kube = { version = "0.96", default-features = false, features = ["client", "config", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
thiserror.workspace = true
base64 = "0.22"
